Refactor side panel

--- a/config.yaml
+++ b/config.yaml
@@ -3,11 +3,35 @@ name: "Alicja Gosiewska"
 photo: "Alicja_circle.png"
 social_media:
   github: "agosiewska"
+  outside_github_stars:
+    - "ModelOriented/iBreakDown"
+    - "ModelOriented/auditor"
+    - "ModelOriented/rSAFE"
+    - "MI2DataLab/survxai"
+    - "ModelOriented/localModel"
+    - "ModelOriented/shapper"
+    - "BioGenies/countfitteR"
   linkedin: "alicja-gosiewska"
   scholar: "YiwwR6EAAAAJ"
+  twitter: "alicjagosiewska"
+  cran_packages:
+    - "auditor"
+    - "rSAFE"
+    - "shapper"
+    - "iBreakDown"
+    - "BLModel"
+    - "survxai"
+    - "localModel"
+    - "countfitteR"
+    
 about:
   - "Data enthusiast with 4+ experience in data science."
   - "Skilled in R and Python."
   - "Interested in explainable artificial intelligence (XAI) and data visualization."
   - "With a strong background in mathematics (Bachelor) and statistics (Master)."
+panels:
+  industry: "./data/industry.md"
+  academia: "./data/academia.md"
+  community: "./data/community.md"
+  technology: "./data/technology.md"
 
