--- a/config.yaml
+++ b/config.yaml
@@ -11,6 +11,7 @@ social_media:
     - "ModelOriented/localModel"
     - "ModelOriented/shapper"
     - "BioGenies/countfitteR"
+    - "ModelOriented/EloML"
   linkedin: "alicja-gosiewska"
   scholar: "YiwwR6EAAAAJ"
   twitter: "alicjagosiewska"
